aidl文件中parcelable 数据model放在aidl目录下，注意build文件中source set

--- a/service/src/main/AndroidManifest.xml
+++ b/service/src/main/AndroidManifest.xml
@@ -18,7 +18,12 @@
     		<action android:name="com.wangweijun.xxxx" />
     	</intent-filter>
 	</service>
-</application>
-    <uses-sdk android:minSdkVersion="3" />
 
-</manifest> 
+        <service android:name=".download.DownloadService">
+            <intent-filter>
+                <action android:name="com.lifeblood.download.DownloadService"></action>
+            </intent-filter>
+        </service>
+</application>
+
+</manifest>
