--- a/client/src/main/AndroidManifest.xml
+++ b/client/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".DownloadClientActivity"/>
     </application>
-    <uses-sdk android:minSdkVersion="3" />
 
 </manifest>
