--- a/service/build.gradle
+++ b/service/build.gradle
@@ -22,6 +22,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', 'src/main/aidl']
+        }
+    }
+
 }
 
 dependencies {
